--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rc-pagination": "^3.7.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-responsive-modal": "^6.4.2",
@@ -24,19 +25,19 @@
   },
   "eslintConfig": {
     "extends": [
-        "react-app",
-        "react-app/jest"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
+    "@types/react-credit-cards": "^0.8.4",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
     "prettier": "^3.2.4",
