--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.48.2",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.15.0",
+    "react-select": "^5.8.0",
     "sweetalert2": "^11.10.1"
   },
   "eslintConfig": {
