--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.0",
     "rc-pagination": "^3.7.0",
     "react": "^18.2.0",
@@ -19,9 +21,13 @@
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-redux": "^9.1.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.8.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "sweetalert2": "^11.10.1"
   },
   "eslintConfig": {
